@@ -1,3 +1,5 @@
+include CHANGELOG
+include LICENSE
 include src/pyfmi/*.pyx
 include src/pyfmi/*.pxd
 exclude src/pyfmi/util/FMILogger.dll
